--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
   },
   "private": true,
   "dependencies": {
-    "nativescript-angular": "~7.2.0",
-    "nativescript-theme-core": "~1.0.4",
-    "reflect-metadata": "~0.1.12",
-    "tns-core-modules": "~5.2.0",
     "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.2.9",
     "@angular/cdk": "^7.3.4",
@@ -31,9 +27,14 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@nativescript/schematics": "^0.5.1",
+    "angular": "^1.7.8",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "nativescript-angular": "~7.2.0",
+    "nativescript-theme-core": "~1.0.4",
+    "reflect-metadata": "~0.1.12",
     "rxjs": "~6.3.3",
+    "tns-core-modules": "~5.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
